--- a/app/user/profile.component.html
+++ b/app/user/profile.component.html
@@ -14,9 +14,9 @@
         <em *ngIf="!validateLastName()">Required</em>
         <input formControlName="lastName" id="lastName" type="text" class="form-control" placeholder="Last Name..." />
       </div>
-
       <button type="submit" class="btn btn-primary">Save</button>
       <button type="button" class="btn btn-default" (click)="cancel()">Cancel</button>
+      <button type="button" class="btn btn-warning" style="float: right" (click)="logout()">Logout</button>
     </form>
   </div>
 </div>
